User count assert on re-saving a particular file #56273

Closed
opened 2018-08-08 10:21:59 +02:00 by Campbell Barton · 3 comments

Open this file in 2.8x e4b68befa2eb26df7114507f41102a60b5d38fe7 (latest head).

Then select file -> new.

leon.blend

Gives the following output.

ID user decrement error: IM0001.jpg (from '[Main]'): 0 <= 0
/src/blender/blender.bin(BLI_system_backtrace+0x35) [0x5566d0ead4a9]
/src/blender/blender.bin(id_us_min+0x9a) [0x5566d0a50c19]
/src/blender/blender.bin(BKE_camera_free+0x3a) [0x5566d097992d]
/src/blender/blender.bin(BKE_libblock_free_datablock+0x30f) [0x5566d0a6b20d]
/src/blender/blender.bin(BKE_libblock_free_ex+0xb5) 
/src/blender/blender.bin(BKE_main_free+0xc5) [0x5566d0a57cb6]
/src/blender/blender.bin(BKE_blender_globals_clear+0x16) [0x5566d09624c0]
/src/blender/blender.bin(+0x1600092) [0x5566d0964092]
/src/blender/blender.bin(BKE_blendfile_read+0xe8) [0x5566d0964695]
/src/blender/blender.bin(wm_homefile_read+0x4e4) [0x5566cfdce7d8]
/src/blender/blender.bin(+0xa6ccaf) [0x5566cfdd0caf]
--- snip
BLI_assert failed: /src/blender/source/blender/blenkernel/intern/library.c:247, id_us_min(), at '0'


Open this file in 2.8x `e4b68befa2eb26df7114507f41102a60b5d38fe7` (latest head). Then select file -> new. [leon.blend](https://archive.blender.org/developer/F4152251/leon.blend) Gives the following output. ``` ID user decrement error: IM0001.jpg (from '[Main]'): 0 <= 0 /src/blender/blender.bin(BLI_system_backtrace+0x35) [0x5566d0ead4a9] /src/blender/blender.bin(id_us_min+0x9a) [0x5566d0a50c19] /src/blender/blender.bin(BKE_camera_free+0x3a) [0x5566d097992d] /src/blender/blender.bin(BKE_libblock_free_datablock+0x30f) [0x5566d0a6b20d] /src/blender/blender.bin(BKE_libblock_free_ex+0xb5) /src/blender/blender.bin(BKE_main_free+0xc5) [0x5566d0a57cb6] /src/blender/blender.bin(BKE_blender_globals_clear+0x16) [0x5566d09624c0] /src/blender/blender.bin(+0x1600092) [0x5566d0964092] /src/blender/blender.bin(BKE_blendfile_read+0xe8) [0x5566d0964695] /src/blender/blender.bin(wm_homefile_read+0x4e4) [0x5566cfdce7d8] /src/blender/blender.bin(+0xa6ccaf) [0x5566cfdd0caf] --- snip BLI_assert failed: /src/blender/source/blender/blenkernel/intern/library.c:247, id_us_min(), at '0' ```
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Bastien Montagne was assigned by Campbell Barton 2018-08-08 10:23:09 +02:00

This issue was referenced by 7a6d7d056b

This issue was referenced by 7a6d7d056bee4336e891b83b7bba8ab41de36ebf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56273
No description provided.