source/blender/blenkernel/intern/library_query.c
@@ -682,6 +682,15 @@ void BKE_library_foreach_ID_link(Main *bmain, ID *id, LibraryIDLinkCallback call
 			{
 				Camera *camera = (Camera *) id;
 				CALLBACK_INVOKE(camera->dof_ob, IDWALK_CB_NOP);
+				for (CameraBGImage *bgpic = camera->bg_images.first; bgpic; bgpic = bgpic->next) {
+					if (bgpic->source == CAM_BGIMG_SOURCE_IMAGE) {
+						CALLBACK_INVOKE(bgpic->ima, IDWALK_CB_USER);
+					}
+					else if (bgpic->source == CAM_BGIMG_SOURCE_MOVIE) {
+						CALLBACK_INVOKE(bgpic->clip, IDWALK_CB_USER);
+					}
+				}
+
 				break;
 			}
 
